Revision history for {{$dist->name}}

{{$NEXT}}
 - Add txn_wrap attribute to DBIC::DeploymentHandler
 - Bugfix: Do not remove "false" transactions in deploy()
 - use SQL::SplitStatement to split SQL statements in DDLs

0.002232  2019-06-06 21:49:17-04:00 America/New_York
 - Add missing dependency on YAML.pm

0.002231  2019-05-10 09:28:36-04:00 America/New_York
 - Revert conversion to Moo; this code is now identical to v0.002224, with one
   small fix from 0.002225, having to do with Pg chunk-splitting when there
   is no semicolon

0.002230  2019-03-14 18:31:07+00:00 Europe/London
 - MooX::Role::Parameterized forces min perl 5.010

0.002229  2019-03-14 18:13:25+00:00 Europe/London
 - convert from Package::Variant to MooX::Role::Parameterized - fix #67

0.002228  2019-03-14 07:13:33+00:00 Europe/London
 - IO::All dep to 0.87 in case causing Win32 problem

0.002227  2019-03-11 05:58:07+00:00 Europe/London
 - test version-objects in 5.8-10 compatible way

0.002226  2019-03-11 03:14:04+00:00 Europe/London
 - relax the Pg chunk-splitting when no ";"
 - better test of version-object on schema

0.002225  2019-03-11 01:56:47+00:00 Europe/London
 - convert to Type::Tiny
 - Port to Moo
 - convert parameterised role to Package::Variant
 - convert file-handling to IO::All

0.002224  2019-03-09 05:16:47+00:00 Europe/London
 - binmode on all filehandles so lines always end LF - thanks @wchristian
 - more sophisticated SQL parsing handles Pg $$ stuff - thanks @mrenvoize
   for report

0.002223  2019-03-07 01:36:36+00:00 Europe/London
 - handle "package NAME VERSION" in a DBIx::Class::Schema - $VERSION
   will be object
 - add needed dep - thanks @wheinze

0.002222  2018-01-06 10:25:42-08:00 America/Los_Angeles
 - Stop defaulting to include DROP TABLE, introduced by fix in prior release
   (Fixes GH#59, thanks for the report Eugen Konkov!)

0.002221  2017-09-27 21:19:42-04:00 America/New_York
 - Allow easy changing the version storage table name, which makes subclassing