@@ -1,14 +1,16 @@
 use strict;
 use warnings;
+use 5.010;
 
 use Test::More;
 
 use DBIx::Class::DeploymentHandler::DeployMethod::SQL::Translator;
 
 sub make_dm {
-  my ($storage_class) = @_;
+  my $storage_class = shift;
   bless {
     storage => bless({}, 'DBIx::Class::Storage::DBI::'.$storage_class),
+    @_,
   }, 'DBIx::Class::DeploymentHandler::DeployMethod::SQL::Translator';
 }
 
@@ -22,6 +24,65 @@ END;
 END
 
 is_deeply [ $dm->_split_sql_chunk( 'foo', ' ', 'bar' ) ], [qw(foo bar)];
+
+$dm = make_dm('MySQL', txn_prep => 1);  # default, bw-comp.
+
+is_deeply [ $dm->_split_sql_chunk( <<'END' ) ],
+BEGIN;
+-- stuff
+DELIMITER $$
+insert into door (color) VALUES ('#f00')$$
+SELECT * FROM YADAH$$
+DELIMITER ;
+Commit;
+END
+  [
+    q(insert into door (color) VALUES ('#f00')),
+    'SELECT * FROM YADAH',
+  ];
+
+$dm = make_dm('MySQL', txn_prep => 0);
+
+is_deeply [ $dm->_split_sql_chunk( <<'END' ) ],
+BEGIN;
+-- stuff
+DELIMITER $$
+insert into door (color) VALUES ('#000')$$
+SELECT * FROM YADAH$$
+DELIMITER ;
+Commit;
+END
+  [
+    'BEGIN',
+    q(insert into door (color) VALUES ('#000')),
+    'SELECT * FROM YADAH',
+    'Commit',
+  ];
+
+$dm = make_dm('MySQL', txn_prep => 0);
+
+is_deeply [ $dm->_split_sql_chunk( <<'END' ) ],
+insert into door (color) VALUES ('#000');
+
+CREATE TRIGGER upd_check BEFORE UPDATE ON account
+     FOR EACH ROW
+     BEGIN
+         IF NEW.amount < 0 THEN
+             SET NEW.amount = 0;
+         ELSEIF NEW.amount > 100 THEN
+             SET NEW.amount = 100;
+         END IF;
+     END;
+
+SELECT * FROM YADAH;
+
+END
+  [
+    q(insert into door (color) VALUES ('#000')),
+    'CREATE TRIGGER upd_check BEFORE UPDATE ON account FOR EACH ROW BEGIN IF NEW.amount < 0 THEN SET NEW.amount = 0; ELSEIF NEW.amount > 100 THEN SET NEW.amount = 100; END IF; END',
+    'SELECT * FROM YADAH',
+  ];
+
 
 $dm = make_dm('Pg');
 is_deeply [ $dm->_split_sql_chunk( <<'END' ) ],
